--- a/app/webhook/templates/index.html
+++ b/app/webhook/templates/index.html
@@ -24,10 +24,10 @@ function fetchRequests() {
         // "Travis" pushed to "staging" on 1st April 2021 - 9:30 PM UTC
         let message = ''
         if (gitRequest.action === 'PUSH') {
-          message = `"${gitRequest.author}" pushed to "${gitRequest.to_branch}" on ${gitRequest.timestamp}`;
+          message = `"${gitRequest.author}" pushed to "${gitRequest.to_branch}" on ${gitRequest.time_label}`;
         } else if (gitRequest.action === 'PULL_REQUEST') {
           // "Travis" submitted a pull request from "staging" to "master" on 1st April 2021 - 9:00 AM UTC
-          message = `"${gitRequest.author}" submitted a pull request from "${gitRequest.from_branch}" to "${gitRequest.to_branch}" on ${gitRequest.timestamp}`;
+          message = `"${gitRequest.author}" submitted a pull request from "${gitRequest.from_branch}" to "${gitRequest.to_branch}" on ${gitRequest.time_label}`;
         } else {
           alert('not yet implemented');
         }
