--- a/app/webhook/templates/index.html
+++ b/app/webhook/templates/index.html
@@ -28,8 +28,11 @@ function fetchRequests() {
         } else if (gitRequest.action === 'PULL_REQUEST') {
           // "Travis" submitted a pull request from "staging" to "master" on 1st April 2021 - 9:00 AM UTC
           message = `"${gitRequest.author}" submitted a pull request from "${gitRequest.from_branch}" to "${gitRequest.to_branch}" on ${gitRequest.time_label}`;
+        } else if (gitRequest.action === 'MERGE') {
+          // "Travis" merged branch "dev" to "master" on 2nd April 2021 - 12:00 PM UTC
+          message = `"${gitRequest.author}" merged branch "${gitRequest.from_branch}" to "${gitRequest.to_branch}" on ${gitRequest.time_label}`;
         } else {
-          alert('not yet implemented');
+          alert(`Action ${gitRequest.action} Not Yet Implemented`)
         }
         li.appendChild(document.createTextNode(message));
         ul.appendChild(li);
@@ -44,7 +47,7 @@ function fetchRequests() {
     setInterval(() => {
       document.getElementById('gitRequestlist').innerHTML = ''
       fetchRequests();
-    }, 99999999); // make it 15 seconds later
+    }, 15000);
   });
 </script>
 </html>
